# code-kata

./: .gitignore  README.md
problem_1/: Dockerfile  README.md  pyproject.toml
problem_1/fixed_width_parser/: generate_fixed_width_file.py  parse_fixed_width_file.py
problem_1/tests/: test_generate_field_data.py  test_generate_fixed_width_file.py  test_parse_fixed_width_file.py
problem_2/: Dockerfile  README.md  pyproject.toml  requirements.txt
problem_2/data_processing/: anonymize_data.py  generate_large_csv.py
problem_2/tests/: test_anonymize_data.py  test_generate_large_csv.py
