[tool.poetry]
name = "data_processing"
version = "0.1.0"
description = "Generate and anonymize large CSV datasets using PySpark."
authors = ["Datta Tele <datta.tele@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.4.1"
numpy = "^1.23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.6.1"
pandas = "^1.5.0"
